# Quantum-walks

./: CITATION.cff  LICENSE  README.md  custom_operators.py  notebook.ipynb  parrondos_2Qubit.ipynb  parrondos_2Qubit.py  parrondos_qwalk_1D.py  pyproject.toml  quantum walk.nb
quantumwalks/: __init__.py  discrete_walk.py  discrete_walk_numba.py
quantumwalks/utils/: __init__.py  operators.py  visualization.py
tests/: conftest.py  test_discrete_walk.py  test_operator.py
