[tool.poetry]
name = "quantumwalks"
version = "0.1.0"
description = "Quantum walk simulation for graphs"
authors = ["Jishnu <rjishnu55@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
ipywidgets = "^8.1.5"
tdqm = "^0.0.1"
pandas = "^2.2.3"
scienceplots = "^2.1.1"
scipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
